# elfreader

./: CMakeLists.txt  README.md
src/: main.cpp
src/parser/: elf_parser.cpp  elf_parser.h
src/utils/: arg_mode.h  arg_parser.cpp  arg_parser.h
